--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-    },
-  "engines":{
-    "node":"6.11.0"
+  },
+  "engines": {
+    "node": "6.11.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "socket.io": "^1.4.8"
   }
 }
